fix(WorkflowCodeBlock): add optional properties for repo
Add optional properties for repository, owner and version for displaying
a specific version of the code

--- a/src/components/GitHubActionsWorkflow/GitHubActionsWorkflow.mdx
+++ b/src/components/GitHubActionsWorkflow/GitHubActionsWorkflow.mdx
@@ -26,5 +26,5 @@ import WorkflowJobsList from '@site/src/components/GitHubActionsWorkflow/Workflo
 
 <details>
   <summary>Click to view workflow file</summary>
-  <WorkflowCodeBlock workflow={props.workflow} />
+  <WorkflowCodeBlock workflow={props.workflow} repository={props.repository} />
 </details>
