feat(GitHubActionsWorkflow): add boilerplate text on details below

--- a/src/components/GitHubActionsWorkflow/GitHubActionsWorkflow.mdx
+++ b/src/components/GitHubActionsWorkflow/GitHubActionsWorkflow.mdx
@@ -6,6 +6,8 @@ import WorkflowJobsList from '@site/src/components/GitHubActionsWorkflow/Workflo
 
 ## Workflow details
 
+This section provides detailed information extracted from the workflow file, including inputs, secrets, outputs, and jobs.
+
 ### Inputs
 
 <details>
