feat(components): add ActionIput component
Add component for reading inputs from an action.yml file

--- a/src/components/Actions/Action.mdx
+++ b/src/components/Actions/Action.mdx
@@ -1,5 +1,4 @@
-import WorkflowInput from '@site/src/components/GitHubActionsWorkflow/WorkflowInput'
-import WorkflowOutput from '@site/src/components/GitHubActionsWorkflow/WorkflowOutput'
+import ActionInput from '@site/src/components/Actions/ActionInput'
 
 ## Action details
 
@@ -8,13 +7,13 @@ This section provides detailed information extracted from the action.yml file of
 ### Inputs
 
 <details>
-  <summary>Click to view all inputs to the workflow</summary>
-<WorkflowInput workflow={props.workflow} />
+  <summary>Click to view all inputs to the action</summary>
+<ActionInput repository={props.repository} />
 </details>
 
 ### Outputs
 
 <details>
-  <summary>Click to view all outputs from the workflow</summary>
-<WorkflowOutput workflow={props.workflow} />
+  <summary>Click to view all outputs from the action</summary>
+To be implemented
 </details>
