feat(components): add action output component
Add component ActionOutput for automatically documenting outputs of GitHub actions

--- a/src/components/Actions/Action.mdx
+++ b/src/components/Actions/Action.mdx
@@ -1,4 +1,5 @@
 import ActionInput from '@site/src/components/Actions/ActionInput'
+import ActionOutput from '@site/src/components/Actions/ActionOutput'
 
 ## Action details
 
@@ -15,5 +16,5 @@ This section provides detailed information extracted from the action.yml file of
 
 <details>
   <summary>Click to view all outputs from the action</summary>
-To be implemented
+<ActionOutput repository={props.repository} />
 </details>
